# rust-orderbook

./: .gitignore  Cargo.toml  README.md  logging_config.yaml  rustfmt.toml
.github/workflows/: clippy.yml  rust.yml
benches/: indicators_benchmark.rs  order_benchmark.rs  strategy_benchmark.rs
data/: ob.csv  orders.csv
examples/: execution_prob.rs  obviz.rs  signal_strat.rs  snap.rs  snap_to_event.rs  strategy_flow.rs
src/: account.rs  backtest.rs  error.rs  event.rs  experiments.rs  indicators.rs  lib.rs  main.rs  management.rs  matching_engine.rs  obviz.rs  orderbook.rs  risk_control.rs  snap.rs  strategy.rs  strategy_flow.rs  utils.rs
src/backtest/: mod.rs  strat_w_signal.rs  strategy.rs  strategy_flow.rs
src/engine/: diff.rs  event.rs  indicators.rs  matching_engine.rs  mod.rs  obviz.rs  risk_control.rs  snap.rs  tick.rs
src/experiments/: execution.rs  mod.rs  scheduler.rs
src/management/: fix_price.rs  fix_spread.rs  mod.rs  oms.rs  signal_strat.rs
src/orderbook/: utils.rs
src/utils/: bench.rs  dist.rs  mod.rs  print.rs  repeat.rs  tests.rs  tick.rs
tests/: indicators.rs  integration_test.rs  management.rs  orderbook.rs  strategy_flow.rs
tests/common/: mod.rs
