[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "orderbook_lib"
# path = "src/lib.rs"

[[bin]]
name = "orderbook-bin"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
debug = false
strip = true
codegen-units = 1
panic = 'abort'

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1 


[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"]}
csv = "1.3.0"
thiserror = "1.0"
rstest = "0.22"
readable = "0.16"
# log = "0.4.21"
# log4rs = "1.3.0"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}
pretty_assertions = "1.4"
# tempfile
# proptest
# insta

[[bench]]
name = "order_benchmark"
harness = false

[[test]]
name = "strategy_flow"
test = false
