[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 3
debug = false
strip = true
codegen-units = 1
panic = 'abort'

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1 


[dependencies]
rand = "0.9"
serde = { version = "1.0", features = ["derive"]}
csv = "1.3.0"
thiserror = "2.0"
rstest = "0.24"
readable = "0.16"
log = "0.4.21"
log4rs = "1.3.0"
rayon = "1.10"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}
pretty_assertions = "1.4"
# hdf5-sys = "0.3.2"
# tempfile
# proptest
# insta

[[bench]]
name = "order_benchmark"
harness = false

[[test]]
name = "strategy_flow"
test = false
